--- a/faq.html
+++ b/faq.html
@@ -1,3 +1,13 @@
+<html>
+  <head>
+    <style>
+      html, body {
+        background-color: black;
+        color: white;
+      }
+    </style>
+  </head>
+  <body>
 <strong>Should I wear a mask?</strong>
 <p>The C.D.C. has recommended that all Americans wear cloth masks if they go out in public. This is a shift in federal guidance reflecting new concerns that the coronavirus is being spread by infected people who have no symptoms. Until now, the C.D.C., like the W.H.O., has advised that ordinary people don’t need to wear masks unless they are sick and coughing. Part of the reason was to preserve medical-grade masks for health care workers who desperately need them at a time when they are in continuously short supply. Masks don’t replace hand washing and social distancing.</p>
 
@@ -30,3 +40,5 @@
 
 <strong>What should I do with my 401(k)?</strong>
 <p>Watching your balance go up and down can be scary. You may be wondering if you should decrease your contributions — don’t! If your employer matches any part of your contributions, make sure you’re at least saving as much as you can to get that “free money.”</p>
+</body>
+</html>
