--- a/faq.html
+++ b/faq.html
@@ -4,6 +4,8 @@
       html, body {
         background-color: black;
         color: white;
+        padding: 15px;
+        font-size: 28px;
       }
     </style>
   </head>
