--- a/faq.html
+++ b/faq.html
@@ -4,8 +4,8 @@
       html, body {
         background-color: black;
         color: white;
-        padding: 15px;
-        font-size: 28px;
+        padding: 200px 15px;
+        font-size: 42px;
       }
     </style>
   </head>
