--- a/faq.html
+++ b/faq.html
@@ -4,13 +4,14 @@
       html, body {
         background-color: black;
         color: white;
-        padding: 200px 15px;
+        padding: 225px 15px;
         font-size: 42px;
       }
     </style>
   </head>
   <body>
-<strong>Should I wear a mask?</strong>
+<h2>Frequently Asked Questions</h2>
+    <strong>Should I wear a mask?</strong>
 <p>The C.D.C. has recommended that all Americans wear cloth masks if they go out in public. This is a shift in federal guidance reflecting new concerns that the coronavirus is being spread by infected people who have no symptoms. Until now, the C.D.C., like the W.H.O., has advised that ordinary people don’t need to wear masks unless they are sick and coughing. Part of the reason was to preserve medical-grade masks for health care workers who desperately need them at a time when they are in continuously short supply. Masks don’t replace hand washing and social distancing.</p>
 
 <strong>What should I do if I feel sick?</strong>
