--- a/faq.html
+++ b/faq.html
@@ -2,10 +2,10 @@
   <head>
     <style>
       html, body {
-        background-color: black;
-        color: white;
+        background-color: white;
+        color: black;
         padding: 225px 15px;
-        font-size: 42px;
+        font-size: 44px;
       }
     </style>
   </head>
