--- a/faq.html
+++ b/faq.html
@@ -1,47 +1,32 @@
 <html>
   <head>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <style>
-      html, body {
-        background-color: white;
-        color: black;
-        padding: 225px 15px;
-        font-size: 44px;
-      }
+      html, body { font-family: 'Roboto', sans-serif; background-color: black; color: white; }
+      td { vertical-align: top; }
+      h1 { font-size: 16px; font-weight: bold; margin: 0; }
+      p { font-size: 14px; margin-top: 0; }
+      .color-green { color: green; }
+      .color-amber { color: orange; }
+      .color-red { color: red; }
     </style>
   </head>
   <body>
-<h2>Frequently Asked Questions</h2>
-    <strong>Should I wear a mask?</strong>
-<p>The C.D.C. has recommended that all Americans wear cloth masks if they go out in public. This is a shift in federal guidance reflecting new concerns that the coronavirus is being spread by infected people who have no symptoms. Until now, the C.D.C., like the W.H.O., has advised that ordinary people don’t need to wear masks unless they are sick and coughing. Part of the reason was to preserve medical-grade masks for health care workers who desperately need them at a time when they are in continuously short supply. Masks don’t replace hand washing and social distancing.</p>
-
-<strong>What should I do if I feel sick?</strong>
-<p>If you’ve been exposed to the coronavirus or think you have, and have a fever or symptoms like a cough or difficulty breathing, call a doctor. They should give you advice on whether you should be tested, how to get tested, and how to seek medical treatment without potentially infecting or exposing others.</p>
-
-<strong>How do I get tested?</strong>
-<p>If you’re sick and you think you’ve been exposed to the new coronavirus, the C.D.C. recommends that you call your healthcare provider and explain your symptoms and fears. They will decide if you need to be tested. Keep in mind that there’s a chance — because of a lack of testing kits or because you’re asymptomatic, for instance — you won’t be able to get tested.</p>
-
-<strong>How does coronavirus spread?</strong>
-<p>It seems to spread very easily from person to person, especially in homes, hospitals and other confined spaces. The pathogen can be carried on tiny respiratory droplets that fall as they are coughed or sneezed out. It may also be transmitted when we touch a contaminated surface and then touch our face.</p>
-
-<strong>Is there a vaccine yet?</strong>
-<p>No. The first testing in humans of an experimental vaccine began in mid-March. Such rapid development of a potential vaccine is unprecedented, but even if it is proved safe and effective, it probably will not be available for 12 to18 months.</p>
-
-<strong>What makes this outbreak so different?</strong>
-<p>Unlike the flu, there is no known treatment or vaccine, and little is known about this particular virus so far. It seems to be more lethal than the flu, but the numbers are still uncertain. And it hits the elderly and those with underlying conditions — not just those with respiratory diseases — particularly hard.</p>
-
-<strong>What if somebody in my family gets sick?</strong>
-<p>If the family member doesn’t need hospitalization and can be cared for at home, you should help him or her with basic needs and monitor the symptoms, while also keeping as much distance as possible, according to guidelines issued by the C.D.C. If there’s space, the sick family member should stay in a separate room and use a separate bathroom. If masks are available, both the sick person and the caregiver should wear them when the caregiver enters the room. Make sure not to share any dishes or other household items and to regularly clean surfaces like counters, doorknobs, toilets and tables. Don’t forget to wash your hands frequently.</p>
-
-<strong>Should I stock up on groceries?</strong>
-<p>Plan two weeks of meals if possible. But people should not hoard food or supplies. Despite the empty shelves, the supply chain remains strong. And remember to wipe the handle of the grocery cart with a disinfecting wipe and wash your hands as soon as you get home.</p>
-
-<strong>Can I go to the park?</strong>
-<p>Yes, but make sure you keep six feet of distance between you and people who don’t live in your home. Even if you just hang out in a park, rather than go for a jog or a walk, getting some fresh air, and hopefully sunshine, is a good idea.</p>
-
-<strong>Should I pull my money from the markets?</strong>
-<p>That’s not a good idea. Even if you’re retired, having a balanced portfolio of stocks and bonds so that your money keeps up with inflation, or even grows, makes sense. But retirees may want to think about having enough cash set aside for a year’s worth of living expenses and big payments needed over the next five years.</p>
-
-<strong>What should I do with my 401(k)?</strong>
-<p>Watching your balance go up and down can be scary. You may be wondering if you should decrease your contributions — don’t! If your employer matches any part of your contributions, make sure you’re at least saving as much as you can to get that “free money.”</p>
-</body>
+    <table>
+      <tr>
+        <td class="color-green">✓</td>
+        <td>
+          <h1>Stability of Hospitalizations</h1>
+          <p class="color-green">Numbers are satisfactory</p>
+        </td>
+      </tr>
+      <tr>
+        <td class="color-red">✗</td>
+        <td>
+          <h1>Personal Protective Equipment Inventory</h1>
+          <p class="color-red">Numbers are not increasing</p>
+        </td>
+      </tr>
+    </table>
+  </body>
 </html>
