--- a/faq.html
+++ b/faq.html
@@ -6,6 +6,13 @@
     <style>
       html, body { font-family: 'Roboto', sans-serif; background-color: black; color: white; }
       
+      body {
+        display: grid;
+        height: 100vh;
+        margin: 0;
+        place-items: center center;
+      }
+      
       h1, h2, h3, h4, h5, h6, p {
         margin: 0px;
       }
@@ -72,7 +79,7 @@
     </style>
   </head>
   <body>
-    <div style="touch-action: pan-y; user-select: none; -webkit-user-drag: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); margin: 175px 20px 0 20px;">
+    <div style="touch-action: pan-y; user-select: none; -webkit-user-drag: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0);">
       <div class="header">
         <p class="title">Citizen Update: New York</p>
         <p class="status">Progress Towards Phase 2</p>
